@@ -75,9 +75,9 @@ class CScreenImporter extends CAbstractScreenImporter {
 				}
 			}
 			$unresolvedReferences = array_unique($unresolvedReferences);
-			throw new Exception(_n('Cannot import screen "%2$s": subscreen "%3$s" does not exist.',
-				'Cannot import screen "%2$s": subscreens "%3$s" do not exist.',
-				count($unresolvedReferences), $screen['name'], implode(', ', $unresolvedReferences)));
+			throw new Exception(_n('Cannot import screen "%1$s": subscreen "%2$s" does not exist.',
+				'Cannot import screen "%1$s": subscreens "%2$s" do not exist.',
+				$screen['name'], implode(', ', $unresolvedReferences), count($unresolvedReferences)));
 		}
 	}
 
