@@ -444,12 +444,12 @@ if ($failedAttempts = CProfile::get('web.login.attempt.failed', 0)) {
 	$attempip = CProfile::get('web.login.attempt.ip', '');
 	$attempdate = CProfile::get('web.login.attempt.clock', 0);
 
-	$error_msg = _n('%1$s failed login attempt logged. Last failed attempt was from %2$s on %3$s at %4$s.',
-		'%1$s failed login attempts logged. Last failed attempt was from %2$s on %3$s at %4$s.',
-		$failedAttempts,
+	$error_msg = _n('%4$s failed login attempt logged. Last failed attempt was from %1$s on %2$s at %3$s.',
+		'%4$s failed login attempts logged. Last failed attempt was from %1$s on %2$s at %3$s.',
 		$attempip,
 		zbx_date2str(_('d M Y'), $attempdate),
-		zbx_date2str(_('H:i'), $attempdate)
+		zbx_date2str(_('H:i'), $attempdate),
+		$failedAttempts
 	);
 	error($error_msg);
 
