@@ -4,6 +4,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+..F....... [ZBX-7085] fixed gettext errors when omitting the number placeholder in singular form translations (Pavels)
 
 --------------------------------------------------------------------------------
 Changes for 2.1.8
